修改接口