@@ -17,22 +17,26 @@
     <properties>
         <java.version>13</java.version>
         <spring-boot-starter-web.version>2.2.0.RELEASE</spring-boot-starter-web.version>
+        <spring-boot-starter-data-redis.version>2.2.0.RELEASE</spring-boot-starter-data-redis.version>
+        <spring-boot-starter-websocket.version>2.2.0.RELEASE</spring-boot-starter-websocket.version>
+        <spring-boot-starter-quartz.version>2.2.0.RELEASE</spring-boot-starter-quartz.version>
+        <spring-boot-starter-test.version>2.2.0.RELEASE</spring-boot-starter-test.version>
+        <spring-boot-maven-plugin.version>2.2.0.RELEASE</spring-boot-maven-plugin.version>
+        <spring-cloud-starter-openfeign.version>2.2.0.RELEASE</spring-cloud-starter-openfeign.version>
+        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
         <mybatis-spring-boot-starter.version>2.1.1</mybatis-spring-boot-starter.version>
         <pagehelper-spring-boot-starter.version>1.2.12</pagehelper-spring-boot-starter.version>
-        <postgresql.version>42.2.8</postgresql.version>
         <druid-spring-boot-starter.version>1.1.20</druid-spring-boot-starter.version>
-        <spring-boot-starter-data-redis.version>2.2.0.RELEASE</spring-boot-starter-data-redis.version>
+        <postgresql.version>42.2.8</postgresql.version>
         <redisson.version>3.11.5</redisson.version>
-        <spring-cloud-starter-openfeign.version>2.1.3.RELEASE</spring-cloud-starter-openfeign.version>
         <java-jwt.version>3.8.3</java-jwt.version>
-        <spring-boot-starter-websocket.version>2.2.0.RELEASE</spring-boot-starter-websocket.version>
         <basiclti-util.version>1.2.0</basiclti-util.version>
         <fastjson.version>1.2.62</fastjson.version>
         <swagger.version>2.9.2</swagger.version>
         <jaxb-api.version>2.4.0-b180830.0359</jaxb-api.version>
         <commons-codec.version>1.13</commons-codec.version>
-        <spring-boot-starter-quartz.version>2.2.1.RELEASE</spring-boot-starter-quartz.version>
     </properties>
+
 
     <dependencies>
         <!--spring boot包 -->
@@ -165,17 +169,25 @@
             <artifactId>commons-codec</artifactId>
             <version>${commons-codec.version}</version>
         </dependency>
-        <!--Quartz定时任务-->
+
+        <!--Quartz定时任务 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-quartz</artifactId>
             <version>${spring-boot-starter-quartz.version}</version>
         </dependency>
+        <!--		<dependency>-->
+        <!--			<groupId>org.quartz-scheduler</groupId>-->
+        <!--			<artifactId>quartz</artifactId>-->
+        <!--			<version>${quartz.version}</version>-->
+        <!--		</dependency>-->
+
 
         <!--spring boot单元测试包 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
+            <version>${spring-boot-starter-test.version}</version>
             <scope>test</scope>
             <exclusions>
                 <exclusion>
@@ -187,13 +199,65 @@
 
     </dependencies>
 
+
     <build>
+        <resources>
+            <resource>
+                <directory>src/main/java</directory>
+                <!--扫描src/main/java/下的所有properties和xml文件-->
+                <includes>
+                    <include>**/*.properties</include>
+                    <include>**/*.xml</include>
+                </includes>
+                <!--将所扫描文件中的${}引用在打包时换成直接引用-->
+                <filtering>true</filtering>
+            </resource>
+            <resource>
+                <directory>src/main/resources</directory>
+                <!--扫描src/main/resources/下的所有xml文件-->
+                <includes>
+                    <include>**/*.xml</include>
+                    <include>**/*.properties</include>
+                    <include>**/*.yml</include>
+                </includes>
+                <!--将所扫描文件中的${}引用在打包时换成直接引用-->
+                <filtering>true</filtering>
+            </resource>
+        </resources>
+
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>${spring-boot-maven-plugin.version}</version>
+                <configuration>
+                    <mainClass>org.springframework.boot.loader.JarLauncher</mainClass>
+                    <layout>JAR</layout>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>${maven-compiler-plugin.version}</version>
+                <configuration>
+                    <!--使用jdk13进行编译-->
+                    <release>${java.version}</release>
+                    <fork>true</fork>
+                    <!--是否跳过test模块-->
+                    <skip>true</skip>
+                    <!--开启预览功能(默认是关闭的)：jdk预先发行的一些功能，比如switch、文本块等功能-->
+                    <compilerArgs>--enable-preview</compilerArgs>
+                </configuration>
             </plugin>
         </plugins>
     </build>
+
 
 </project>
